@@ -53,9 +53,9 @@ class Config(object):
         master_doc = ('contents', 'env'),
         source_suffix = (['.rst'], 'env'),
         source_encoding = ('utf-8-sig', 'env'),
+        source_parsers = ({}, 'env'),
         exclude_patterns = ([], 'env'),
         default_role = (None, 'env'),
-        parsers = ({}, 'env'),
         add_function_parentheses = (True, 'env'),
         add_module_names = (True, 'env'),
         trim_footnote_reference_space = (False, 'env'),
